can't use ssl for now as cert revoked and cant recreate

--- a/Config/nginx.conf
+++ b/Config/nginx.conf
@@ -14,7 +14,9 @@ server {
 	listen 80;
 	server_name www.ligmincha.com.br ligmincha.com.br;
 	include /var/www/work/nginx.php.conf;
-	rewrite ^ https://ligmincha.com.br$uri last;
+	if (-d $document_root/ligmincha$uri) { rewrite ^ /ligmincha$uri/index.php last; }
+	if (-f $document_root/ligmincha$uri) { rewrite ^ /ligmincha$uri last; }
+	rewrite ^ /ligmincha/index.php$uri last;
 }
 server {
 	listen 443;
@@ -23,7 +25,7 @@ server {
 	ssl_certificate_key /etc/letsencrypt/live/www.ligmincha.com.br/privkey.pem;
 	ssl_certificate /etc/letsencrypt/live/www.ligmincha.com.br/fullchain.pem;
 	include /var/www/work/nginx.php.conf;
-	rewrite ^ https://ligmincha.com.br$uri last;
+	rewrite ^ http://ligmincha.com.br$uri last;
 }
 server {
 	listen 443;
@@ -32,9 +34,7 @@ server {
 	ssl_certificate_key /etc/letsencrypt/live/ligmincha.com.br/privkey.pem;
 	ssl_certificate /etc/letsencrypt/live/ligmincha.com.br/fullchain.pem;
 	include /var/www/work/nginx.php.conf;
-	if (-d $document_root/ligmincha$uri) { rewrite ^ /ligmincha$uri/index.php last; }
-	if (-f $document_root/ligmincha$uri) { rewrite ^ /ligmincha$uri last; }
-	rewrite ^ /ligmincha/index.php$uri last;
+	rewrite ^ http://ligmincha.com.br$uri last;
 }
 
 # BRAZIL TEST JOOMLA
