--- a/Config/nginx.conf
+++ b/Config/nginx.conf
@@ -22,8 +22,8 @@ server {
 	listen 443;
 	server_name www.ligmincha.com.br;
 	include /var/www/work/nginx.ssl.conf;
-	ssl_certificate_key /etc/letsencrypt/live/www.ligmincha.com.br/privkey.pem;
-	ssl_certificate /etc/letsencrypt/live/www.ligmincha.com.br/fullchain.pem;
+	ssl_certificate /var/www/ssl/godaddy/organicdesign.crt;
+	ssl_certificate_key /var/www/ssl/godaddy/organicdesign.key;
 	include /var/www/work/nginx.php.conf;
 	rewrite ^ http://ligmincha.com.br$uri last;
 }
@@ -31,8 +31,8 @@ server {
 	listen 443;
 	server_name ligmincha.com.br;
 	include /var/www/work/nginx.ssl.conf;
-	ssl_certificate_key /etc/letsencrypt/live/ligmincha.com.br/privkey.pem;
-	ssl_certificate /etc/letsencrypt/live/ligmincha.com.br/fullchain.pem;
+	ssl_certificate /var/www/ssl/godaddy/organicdesign.crt;
+	ssl_certificate_key /var/www/ssl/godaddy/organicdesign.key;
 	include /var/www/work/nginx.php.conf;
 	rewrite ^ http://ligmincha.com.br$uri last;
 }
