swicth domans for j2 and 3

--- a/Config/nginx.conf
+++ b/Config/nginx.conf
@@ -29,14 +29,14 @@ server {
 	rewrite ^ http://ligmincha.com.br$uri last;
 }
 
-# BRAZIL TEST JOOMLA
+# BRAZIL OLD JOOMLA2
 server {
 	listen 80;
-	server_name test.ligmincha.com.br;
+	server_name j2.ligmincha.com.br;
 	include /var/www/work/nginx.php.conf;
-	if (-d $document_root/ligtest$uri) { rewrite ^ /ligtest$uri/index.php last; }
-	if (-f $document_root/ligtest$uri) { rewrite ^ /ligtest$uri last; }
-	rewrite ^ /ligtest/index.php$uri last;
+	if (-d $document_root/ligtest$uri) { rewrite ^ /ligj2$uri/index.php last; }
+	if (-f $document_root/ligtest$uri) { rewrite ^ /ligj2$uri last; }
+	rewrite ^ /ligj2/index.php$uri last;
 }
 
 # BARZIL MOODLE
