swicth domans for j2 and 3

--- a/Config/nginx.conf
+++ b/Config/nginx.conf
@@ -34,8 +34,8 @@ server {
 	listen 80;
 	server_name j2.ligmincha.com.br;
 	include /var/www/work/nginx.php.conf;
-	if (-d $document_root/ligtest$uri) { rewrite ^ /ligj2$uri/index.php last; }
-	if (-f $document_root/ligtest$uri) { rewrite ^ /ligj2$uri last; }
+	if (-d $document_root/ligj2$uri) { rewrite ^ /ligj2$uri/index.php last; }
+	if (-f $document_root/ligj2$uri) { rewrite ^ /ligj2$uri last; }
 	rewrite ^ /ligj2/index.php$uri last;
 }
 
