--- a/Config/nginx.conf
+++ b/Config/nginx.conf
@@ -8,25 +8,26 @@ server {
 
 # BRAZIL JOOMLA
 server {
-	listen 80;
+	listen 443;
 	server_name ligmincha.com.br;
+	include /var/www/work/nginx.ssl.conf;
 	include /var/www/work/nginx.php.conf;
 	if (-d $document_root/ligmincha$uri) { rewrite ^ /ligmincha$uri/index.php last; }
 	if (-f $document_root/ligmincha$uri) { rewrite ^ /ligmincha$uri last; }
 	rewrite ^ /ligmincha/index.php$uri last;
 }
 server {
-	listen 80;
-	server_name www.ligmincha.com.br;
-	include /var/www/work/nginx.php.conf;
-	rewrite ^ http://ligmincha.com.br$uri last;
-}
-server {
 	listen 443;
-	server_name www.ligmincha.com.br ligmincha.com.br;
+	server_name www.ligmincha.com.br;
 	include /var/www/work/nginx.ssl.conf;
 	include /var/www/work/nginx.php.conf;
-	rewrite ^ http://ligmincha.com.br$uri last;
+	rewrite ^ https://ligmincha.com.br$uri last;
+}
+server {
+	listen 80;
+	server_name www.ligmincha.com.br ligmincha.com.br;
+	include /var/www/work/nginx.php.conf;
+	rewrite ^ https://ligmincha.com.br$uri last;
 }
 
 # BRAZIL OLD JOOMLA2
