bounce moodle to https

--- a/Config/nginx.conf
+++ b/Config/nginx.conf
@@ -42,12 +42,18 @@ server {
 
 # BARZIL MOODLE
 server {
-	listen 80;
+	listen 443;
 	server_name moodle.ligmincha.com.br;
 	include /var/www/work/nginx.php.conf;
 	if (-d $document_root/moodle$uri) { rewrite ^ /moodle$uri/index.php last; }
 	if (-f $document_root/moodle$uri) { rewrite ^ /moodle$uri last; }
 	rewrite ^ /moodle/index.php$uri last;
+}
+server {
+	listen 80;
+	server_name moodle.ligmincha.com.br;
+	include /var/www/work/nginx.php.conf;
+	rewrite ^ https://moodle.ligmincha.com.br$uri last;
 }
 
 # LIGMINCHA GLOBAL
