bounce wiki to https

--- a/Config/nginx.conf
+++ b/Config/nginx.conf
@@ -1,9 +1,15 @@
 # BRAZIL WIKI
 server {
-	listen 80;
+	listen 443;
 	server_name wiki.ligmincha.com.br;
 	include /var/www/work/nginx.php.conf;
 	include /var/www/work/nginx.wiki.conf;
+}
+server {
+	listen 80;
+	server_name wiki.ligmincha.com.br;
+	include /var/www/work/nginx.php.conf;
+	rewrite ^ https://wiki.ligmincha.com.br$uri last;
 }
 
 # BRAZIL JOOMLA
