--- a/Config/nginx.conf
+++ b/Config/nginx.conf
@@ -65,6 +65,14 @@ server {
 # LIGMINCHA GLOBAL
 server {
 	listen 80;
+	server_name global.ligmincha.org;
+	add_header Access-Control-Allow-Origin *;
+	include /var/www/work/nginx.php.conf;
+	rewrite ^/$ /lg/index.php last;
+	rewrite ^ /lg$uri last;
+}
+server {
+	listen 80;
 	server_name ligmincha.organicdesign.co.nz;
 	include /var/www/work/nginx.php.conf;
 	if (-d $document_root/lg/j1$uri) { rewrite ^ /lg/j1$uri/index.php last; }
