add test joomla, rm old j2

--- a/Config/nginx.conf
+++ b/Config/nginx.conf
@@ -35,21 +35,21 @@ server {
 	include /var/www/work/nginx.php.conf;
 	rewrite ^ https://ligmincha.com.br$uri last;
 }
-
-# BRAZIL OLD JOOMLA2
 server {
-	listen 80;
-	server_name j2.ligmincha.com.br;
+	listen 443;
+	server_name test.ligmincha.com.br;
+	include /var/www/work/nginx.ssl.conf;
 	include /var/www/work/nginx.php.conf;
-	if (-d $document_root/ligj2$uri) { rewrite ^ /ligj2$uri/index.php last; }
-	if (-f $document_root/ligj2$uri) { rewrite ^ /ligj2$uri last; }
-	rewrite ^ /ligj2/index.php$uri last;
+	if (-d $document_root/ligmincha$uri) { rewrite ^ /ligtest$uri/index.php last; }
+	if (-f $document_root/ligmincha$uri) { rewrite ^ /ligtest$uri last; }
+	rewrite ^ /ligtest/index.php$uri last;
 }
 
 # BARZIL MOODLE
 server {
 	listen 443;
 	server_name moodle.ligmincha.com.br;
+	include /var/www/work/nginx.ssl.conf;
 	include /var/www/work/nginx.php.conf;
 	if (-d $document_root/moodle$uri) { rewrite ^ /moodle$uri/index.php last; }
 	if (-f $document_root/moodle$uri) { rewrite ^ /moodle$uri last; }
