--- a/Config/nginx.conf
+++ b/Config/nginx.conf
@@ -118,4 +118,7 @@ server {
 	listen 80;
 	server_name j2.ligmincha.com.br;
 	include /var/www/work/nginx.php.conf;
+	if (-d $document_root/j2$uri) { rewrite ^ /j2$uri/index.php last; }
+	if (-f $document_root/j2$uri) { rewrite ^ /j2$uri last; }
+	rewrite ^ /j2/index.php$uri last;
 }
